small content changes

--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
 
     <section class="alert">
         <div class="alert__box">
-            <p class="alert__text">In response to COVID-19, 
-                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+            <p class="alert__text">In response to COVID-19 
+                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
         </div>
     </section>
 
@@ -173,7 +173,7 @@
             </p>
             <ul class="u-margin__bottom--medium"><strong><p class="u-margin__bottom--small">Examples of this include:</p></strong>
                 <li>A mental health problem or disorder leading to or associated with problematic alcohol and/or other drug use</li>
-                <li>A substance use disorder leading to or associated with a mental diagnosis</li>
+                <li>A substance use disorder leading to or associated with mental health issues</li>
                 <li>Alcohol and/or other drug misuse worsening or altering the course of a person’s mental illness.</li>
             </ul>
         </div>
@@ -253,7 +253,7 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
