--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     </section>
     <section class="alert">
         <div class="alert__box">
-            <p class="alert__text">In response to COVID-19, 
-                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+            <p class="alert__text">In response to COVID-19 
+                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
         </div>
     </section>
     
@@ -271,7 +271,7 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
