--- a/online-consultations.html
+++ b/online-consultations.html
@@ -147,7 +147,7 @@
       </p>
   </section>
     
-    <section class="wrapper__online program program__yellow--background">
+    <section class="wrapper__online program program__yellow--background u-margin__bottom--large">
         <div class="program__details program__details--yellow">
             <div class="program__content--yellow">
                 <h3 class="program__title u-margin__bottom--small">DOWNLOADING ZOOM 
@@ -194,9 +194,7 @@
         </div>
     </section>
 
-    <section class="wrapper u-margin__bottom--large">
-        <p class="u-margin__bottom--large u-center">Please contact us below if you have any questions or issues usign the above technolgies.</p>
-    </section>
+   
     
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
@@ -265,7 +263,7 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
