--- a/what-is-hypnosis.html
+++ b/what-is-hypnosis.html
@@ -143,8 +143,8 @@
 
     <section class="alert">
         <div class="alert__box">
-            <p class="alert__text">In response to COVID-19, 
-                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+            <p class="alert__text">In response to COVID-19 
+                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
         </div>
     </section>
 
@@ -248,7 +248,7 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
