Changed the CTA headline

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="hero">
         <div class="hero__text-box">
             <h1 class="hero__heading-primary">
-                Psychological treatment for substance use disorders
+                Addiction and Psychology Servicesgit 
             </h1>
 
             <a href="treatment-programs.html" class="btn__primary btn__primary--medium">LEARN MORE</a>
