Working on Services branch

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Treatment Programs - Melbourne Substance Use Clininc</title>
+    <title>Services - Melbourne Substance Use Clininc</title>
 </head>
 <body>
     <header class="header">
@@ -30,7 +30,7 @@
                 </ul>
     </header>
 
-    <section class="hero__treatment">
+    <section class="hero__services">
         &nbsp;
     </section>
 
@@ -47,17 +47,17 @@
             <h3 class="featured__title u-margin__bottom--small">
                 Specialist addiction counselling
             </h3>
-            <p class="u-margin__bottom--medium">Our main approach used during treatment is clinical hypnosis, which is the underpinning psychological approach for all our outpatient treatment programs. Clinical hypnotherapy is an evidence-based treatment for addiction, as well as a range of other psychological difficulties and mental health conditions.
+            <p class="u-margin__bottom--medium">Our main approach used during treatment is <a href="/what-is-hypnosis.html" class="text__hyperlink">clinical hypnosis</a>, which is the underpinning psychological approach for all our outpatient treatment programs. Clinical hypnotherapy is an <strong>evidence-based treatment for addiction</strong>, as well as a range of other psychological difficulties and mental health conditions.
             </p>
-            <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
+            <a href="/specialist-addiction.html" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
         </div>
         <div class="services__box">
           <h3 class="featured__title u-margin__bottom--small">
             Psychological services 
           </h3>
-          <p class="u-margin__bottom--medium">We are dedicated to providing high quality and evidence-based psychological services to people experiencing a range of mental health challenges. Our Psychologists are experienced in providing psychological therapy and treatment for a number of issues.
+          <p class="u-margin__bottom--medium">We are dedicated to providing high quality and evidence-based psychological services to people experiencing a range of mental health challenges. Our Psychologists are experienced in providing <strong>psychological therapy and treatment</strong> for a number of issues.
           </p>
-          <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
+          <a href="/psychological-services.html" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
       </div>
     </section>
     
