Continue working on the Services section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-User defined-->
-    <meta name="keywords" content="substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
+    <meta name="keywords" content="addiction, counselling, psychological services, substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
     <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
