Finished Services and Privacy pages

--- a/privacy.html
+++ b/privacy.html
@@ -45,11 +45,18 @@
         <h3 class="featured__title u-margin__bottom--small">
             PRIVACY AND CONFIDENTIALITY
         </h3>
-        <p class="u-margin__bottom--small">All personal information gathered by our clinic is confidential – except in the following circumstances:</p>
+        <p class="u-margin__bottom--small">The service provided at MSUC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
+        <p class="u-margin__bottom--small">As part of providing services to you, our clinicians will need to collect and record your personal information. Most information will be held in a secure online platform used by health professionals (for billing, contact information and case notes). 
+            All information within this online platform is password protected, secure, and encrypted and all hard copy information will be kept in a locked filing cabinet in a locked office in a secure building to ensure your privacy.
+            </p>
+            <p class="u-margin__bottom--small">At any stage clients may request to access the information recorded by the clinician. Your clinician may discuss the contents with them and/or give them a copy.  
+                All requests by clients for access to information held about them should be lodged with their allocated clinician at the clinic. These requests will be responded to within 10 days.
+                 </p>
+        <p class="u-margin__bottom--small"><strong>All personal information</strong> gathered by our clinic <strong>is confidential</strong> – except in the following circumstances:</p>
         <ul>
-            <li>Your information is subpoenaed by the court, and/or</li>
-            <li>Failure to disclose the information would place you or another person at risk; and/or:</li>
-            <li>Your prior written/verbal approval has been obtained to provide information to another health professional, treatment provider or 		agency (e,g, a GP, psychiatrist, etc.</li>
+            <li><strong>Your information</strong> is subpoenaed by the court, and/or</li>
+            <li><strong>Failure to disclose</strong> the information would place you or another person at risk; and/or:</li>
+            <li><strong>Your prior written/verbal approval</strong> has been obtained to provide information to another health professional, treatment provider or 		agency (e,g, a GP, psychiatrist, etc.</li>
         </ul>
     </section>
     
