--- a/psychological-services.html
+++ b/psychological-services.html
@@ -65,12 +65,12 @@
         <h3 class="featured__title u-margin__bottom--small">
             Individual counselling
         </h3>
-        <p class="u-margin__bottom--medium">Your treatment may require one or more assessment/diagnostic sessions. The role of the assessment phase is to help identify both the areas of concern and strengths of an individual, on which subsequent psychological treatments can build on. 
+        <p class="u-margin__bottom--medium">Your treatment may require one or more <strong>assessment/diagnostic sessions.</strong> The role of the assessment phase is to help identify both the areas of concern and strengths of an individual, on which subsequent psychological treatments can build on. 
         </p>
         <ul class="u-margin__bottom--medium"><p class="u-margin__bottom--small"><strong>The initial appointment generally also covers the following:</strong></p>
-            <li>Orientation regarding the process of therapy - including fees and treatment agreement</li>
-            <li>Discussion of your current concerns (what has brought you to therapy)</li>
-            <li>Formulation of a treatment plan that suits you and aims to meet your goals.</li>
+            <li><strong>Orientation</strong> regarding the process of therapy - including fees and treatment agreement</li>
+            <li><strong>Discussion</strong> of your current concerns (what has brought you to therapy)</li>
+            <li><strong>Formulation</strong> of a treatment plan that suits you and aims to meet your goals.</li>
         </ul>
         <p class="u-margin__bottom--medium">The purpose of the initial appointment is to collect as much information about your history and social/family context as possible. The interview usually takes up 50 to 60 minutes. 
         </p>
@@ -99,11 +99,11 @@
     <p class="u-margin__bottom--small">A referral under the Medicare system entitles you for <strong>up to 10 'rebated' counselling sessions per calendar year</strong> (please have your GP complete the referral specifically to your allocated clinician at the Melbourne Substance Use and Psychology Clinic). 
     </p>
     <ul class="u-margin__bottom--medium">
-        <li>Clients with a Mental Health Plan from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
-        <li>There is provision for bulk-billing for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
-        <li>Under the Medicare system, you must have a review with the referrer after the first six sessions to continue receiving the rebate for the final four sessions</li>
-        <li>If treatment extends beyond 10 sessions, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a sliding scale based on current income</li>
-        <li>Please note that bulk-billing spaces are limited; please enquire when the next appointments are available.</li>
+        <li>Clients with a <strong>Mental Health Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
+        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
+        <li>Under the Medicare system, you must have a <strong>review with the referre</strong>r after the first six sessions to continue receiving the rebate for the final four sessions</li>
+        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income.</li>
+        <li>Please note that <strong>bulk-billing spaces are limited;</strong> please enquire when the next appointments are available.</li>
     </ul>
     <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Enquire now</a>
   </section>
