--- a/specialist-addiction.html
+++ b/specialist-addiction.html
@@ -50,7 +50,7 @@
   </section>
 
   <section class="wrapper intro u-margin__bottom--small">
-    <h3 class="featured__title u-margin__top--medium u-margin__bottom--large">
+    <h3 class="featured__title u-margin__top--medium u-margin__bottom--small">
       Treatment options
     </h3>
     <h4 class="u-margin__top--small u-margin__bottom--small">Private Outpatient Treatment Programs</h4>
@@ -66,9 +66,9 @@
               </h3>
               <ul class="program__text">
                   The goal of this program is: <strong>“Staying determined!”</strong> This 20 week outpatient program aims to support you in:
-                  <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
-                  <li>Learning hypno-relaxation as a way to manage 	withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
-                  <li>Developing strategies to handle cravings and urges through imagery conditioning, etc.</li>
+                  <li><strong>Gradually building</strong> inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
+                  <li><strong>Learning hypno-relaxation</strong> as a way to manage 	withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
+                  <li><strong>Developing strategies</strong> to handle cravings and urges through imagery conditioning, etc.</li>
               </ul>
               <p class="program__price">
                   PRICE: $4,600
@@ -83,10 +83,10 @@
               <h3 class="program__title u-margin__bottom--small">"Resilient Soul"
               </h3>
               <ul class="program__text">
-                  The motto of this program is: <strong>“You have the power to change YOUR world”.</strong> This 30-week outpatient program aims to support you in:
-                  <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
-                  <li>Learning hypno-relaxation as a way to manage withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
-                  <li>Working on the deeper levels of your personality so that you can access and work on healing the root causes of your current difficulties and struggles in life – one of which may be your alcohol/drug dependence.</li>
+                  The motto of this program is: <strong>“You have the power to change YOUR world”.</strong> This 30 week outpatient program aims to support you in:
+                  <li><strong>Gradually building</strong> inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
+                  <li><strong>Learning hypno-relaxation</strong> as a way to manage withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
+                  <li><strong>Working on the deeper levels</strong> of your personality so that you can access and work on healing the root causes of your current difficulties and struggles in life – one of which may be your alcohol/drug dependence.</li>
               </ul>
               <p class="program__price">
                   PRICE: $6,900
@@ -97,15 +97,15 @@
   </section>
 
   <section class="wrapper intro u-margin__bottom--small">
-    <h4 class="u-margin__top--small u-margin__bottom--small">Medicare rebates</h4>
+    <h4 class="u-margin__bottom--small">Medicare rebates</h4>
     <p class="u-margin__bottom--small">A referral under the Medicare system entitles you for <strong>up to 10 'rebated' counselling sessions per calendar year</strong> (please have your GP complete the referral specifically to your allocated clinician at the Melbourne Substance Use and Psychology Clinic). 
     </p>
     <ul class="u-margin__bottom--medium">
-        <li>Clients with a Mental Health Plan from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
-        <li>There is provision for bulk-billing for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
-        <li>Under the Medicare system, you must have a review with the referrer after the first six sessions to continue receiving the rebate for the final four sessions</li>
-        <li>If treatment extends beyond 10 sessions, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a sliding scale based on current income</li>
-        <li>Please note that bulk-billing spaces are limited; please enquire when the next appointments are available.</li>
+        <li>Clients with a <strong>Mental Health Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
+        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
+        <li>Under the Medicare system, you must have a <strong>review with the referre</strong>r after the first six sessions to continue receiving the rebate for the final four sessions</li>
+        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income.</li>
+        <li>Please note that <strong>bulk-billing spaces are limited;</strong> please enquire when the next appointments are available.</li>
     </ul>
     <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Enquire now</a>
   </section>
