Completed the Services and Privacy pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Addiction and Psychology Services
             </h1>
 
-            <a href="treatment-programs.html" class="btn__primary btn__primary--medium">LEARN MORE</a>
+            <a href="services.html" class="btn__primary btn__primary--medium">LEARN MORE</a>
         </div>
        
     </section>
