--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
         <ul>
             <li><strong>Your information</strong> is subpoenaed by the court, and/or</li>
             <li><strong>Failure to disclose</strong> the information would place you or another person at risk; and/or:</li>
-            <li><strong>Your prior written/verbal approval</strong> has been obtained to provide information to another health professional, treatment provider or 		agency (e,g, a GP, psychiatrist, etc.</li>
+            <li><strong>Your prior approval</strong> has been obtained to provide a written report to another professional or agency, e.g. a GP or a lawyer or to discuss the material with another person, e.g. a parent or employer.</li>
         </ul>
     </section>
     
