--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-User defined-->
-    <meta name="keywords" content="substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
+    <meta name="keywords" content="addiction, counselling, psychological services, substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
     <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
@@ -11,7 +11,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Home - Melbourne Substance Use and Psychology Clinic</title>
+    <title>Melbourne Substance Use and Psychology Clinic</title>
 </head>
 <body>
     <header class="header">
@@ -23,8 +23,8 @@
             
                 <ul class="menu">
                     <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
-                    <li><a href="treatment-programs.html">TREATMENT PROGRAMS</a></li>
                     <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
@@ -33,10 +33,10 @@
     <section class="hero">
         <div class="hero__text-box">
             <h1 class="hero__heading-primary">
-                Addiction and Psychology Servicesgit 
+                Addiction and Psychology Services
             </h1>
 
-            <a href="treatment-programs.html" class="btn__primary btn__primary--medium">LEARN MORE</a>
+            <a href="services.html" class="btn__primary btn__primary--medium">LEARN MORE</a>
         </div>
        
     </section>
