--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         <a href="about.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
     </section>
 
-    <section class="wrapper featured u-margin__top--small">
+    <section class="wrapper featured u-margin__top--large">
         <div class="featured__item">
-                <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
+                <img src="img/services-normal.jpg" alt="evidence-based psychological services" class="featured__image">
         </div>
         <div class="featured__item">
                 <svg class="featured__icon">
-                    <use xlink:href="img/sprite.svg#icon-what-is-hypnozis"></use>
+                    <use xlink:href="img/sprite.svg#icon-private-outpatient"></use>
                 </svg>
-                <h3 class="featured__title u-margin__bottom--small">What is Hypnosis</h3>
-                <p class="featured__text">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration.</p>
-                <a href="what-is-hypnosis.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
+                <h2 class="featured__title u-margin__bottom--small">Services</h2>
+                <p class="featured__text">We are dedicated to providing high quality and evidence-based psychological services to people experiencing a range of mental health challenges.</p>
+                <a href="services.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
         </div> 
     </section>
 
@@ -85,17 +85,18 @@
 
     <section class="wrapper featured u-margin__top--large u-margin__bottom--large">
         <div class="featured__item">
-                <img src="img/private-outpatiente-normal.jpg" alt="private outpatient recovery program" class="featured__image">
+                <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
         </div>
         <div class="featured__item">
                 <svg class="featured__icon">
-                    <use xlink:href="img/sprite.svg#icon-private-outpatient"></use>
+                    <use xlink:href="img/sprite.svg#icon-what-is-hypnozis"></use>
                 </svg>
-                <h2 class="featured__title u-margin__bottom--small">Private Outpatient Treatment Programs</h2>
-                <p class="featured__text">These programs have been specifically designed to provide the most effective chance for your success and recovery.</p>
-                <a href="treatment-programs.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
+                <h3 class="featured__title u-margin__bottom--small">What is Hypnosis</h3>
+                <p class="featured__text">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration.</p>
+                <a href="what-is-hypnosis.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
         </div> 
     </section>
+   
 
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
