--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -23,8 +23,8 @@
             
                 <ul class="menu">
                     <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
-                    <li><a href="treatment-programs.html">TREATMENT PROGRAMS</a></li>
                     <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
